[package]
name = "injective-auction-pool"
description = "Smart contract that allows for community members to pool together INJ to participate in burn auctions"
authors = [
    "Kerber0x <kerber0x@protonmail.com>",
    "Nahem <nahemseguias@gmail.com>",
    "PFC <pfc@pfc.zone>",
]
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
injective_auction = { workspace = true }
prost = { workspace = true }
cw-utils = { workspace = true }
treasurechest = { workspace = true }
cw-paginate-storage = { workspace = true }
cw-ownable = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
